# McHome2

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  livingroom.yaml  pyproject.toml
.esphome/storage/: livingroom.yaml.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_schedule_days_of_week.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js  dashboard.js  devices.js  houses.js  rooms.js  schedules.js  settings.js  setup.js  tado.js
frontend/src/components/: Breadcrumbs.jsx  ConfirmModal.jsx  ErrorAlert.jsx  Layout.jsx  LoadingSpinner.jsx  Navbar.jsx  Sidebar.jsx
frontend/src/context/: SetupContext.jsx
frontend/src/hooks/: useApi.js
src/mchome2/: config.py  database.py  main.py
src/mchome2/api/: dashboard.py  devices.py  houses.py  predictions.py  readings.py  rooms.py  settings.py  setup.py  tado_auth.py
src/mchome2/hardware/: __init__.py  protocols.py  registry.py
src/mchome2/models/: __init__.py  device.py  house.py  reading.py  room.py
src/mchome2/prediction/: pid_controller.py  predictor.py  solar.py  thermal_model.py
src/mchome2/scheduler/: tasks.py
src/mchome2/schemas/: dashboard.py  device.py  house.py  reading.py  room.py  settings.py  setup.py
tests/: conftest.py  test_api_dashboard.py  test_api_houses.py  test_api_rooms.py  test_api_schedules.py  test_api_settings.py  test_api_setup.py  test_hardware_simulator.py  test_predictor.py  test_tado_drivers.py  test_thermal_model.py
(+32 files in other folders)
