[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mchome2"
version = "0.1.0"
description = "Home Temperature Management System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.0.0",
    "pysolar>=0.11",
    "simple-pid>=2.0.0",
    "apscheduler>=3.10.0",
    "psycopg2-binary>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mchome2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
